Use checkout-owned JSON reader for modPow export regressions